# DetectXr

./: .dockerignore  .env  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  server.js
Backend/: .env.example  .gitignore  package.json  server.js
Backend/src/: app.js
Backend/src/controllers/: analytics.controller.js  submission.controller.js
Backend/src/models/: submission.model.js
Backend/src/routes/: analytics.routes.js
Backend/src/services/: analysis.service.js  analytics.service.js  behavior.service.js  risk.service.js  similarity.service.js
Backend/src/utils/: helpers.js  tokenize.js
docker/: Dockerfile  docker-compose.yml
frontend/: .env.example  .gitignore  index.html  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AnalyticsCard.jsx  CodeInput.jsx  NavBar.jsx  ResultBox.jsx  RishReport.jsx  RiskPanel.jsx  SubmissionForm.jsx
frontend/src/pages/: DashBoard.jsx  Home.jsx
frontend/src/styles/: Home.css  ResultBox.css  RiskPanel.css
src/: app.js  main.cpp
src/config/: db.js
src/controllers/: SubmissionController.h  submission.controller.js
src/database/: SubmissionRepository.h
src/dto/: SubmissionRequest.h
src/engines/behavior/: BehaviorEngine.h
src/engines/risk/: RiskEngine.h
src/engines/similarity/: SimilarityEngine.h
src/models/: Submission.h  submission.model.js
src/routes/: submission.routes.js
src/services/: SubmissionService.h
src/utils/: normalize.js
